# FlaskUserAuthSystem

./: .gitignore  README.md  pyproject.toml
.github/: tests.yml
.github/actions/: setup_poetry.yml
.github/workflows/: lint_and_test.yml  main.yml  python-app.yml  setup_poetry.yml
app/: __init__.py  app.py  forms.py  loader.py  views.py  wsgi.py
app/blueprints/: auth.py  main.py
app/database/: __init__.py  models.py  queries.py
app/db/: models.py  queries.py
app/templates/: base.html  header.html  index.html
app/templates/auth/: auth_base.html  base.html  reset_password.html  restore_password.html  signin.html
app/templates/auth/form_extra/: reset_password_extra.html  signin_extra.html  signup_extra.html
app/templates/auth/form_fields/: confirm_password.html  email.html  password.html
app/templates/errors/: 404.html  csrf.html  csrf_error.html
src/flaskuserauthsystem/: __init__.py  app.py  config.py  db_queries.py  loader.py  log_config.py  wsgi.py
src/flaskuserauthsystem/blueprints/: auth.py  errors.py  main.py
src/flaskuserauthsystem/config/: __init__.py  app_config.py  app_test_config.py  log_config.py
src/flaskuserauthsystem/database/: models.py  queries.py  recovery_link.py  user.py
src/flaskuserauthsystem/db/: db_queries.py  models.py  queries.py
src/flaskuserauthsystem/envs/: .env.dist
src/flaskuserauthsystem/static/js/: main.js
src/flaskuserauthsystem/static/styles/: main.css
src/flaskuserauthsystem/templates/: base.html  header.html  index.html  profile.html
src/flaskuserauthsystem/templates/auth/: auth_base.html  base.html  check_email.html  reset_password.html  signin.html  (+2 more)
src/flaskuserauthsystem/utils/: forms.py  mails.py  password.py
tests/: __init__.py  conftest.py  routes.py  test_app.py  test_auth.py  test_auth_forms.py  test_auth_routes.py  test_db_models.py  test_http_errors.py  test_main_routes.py  test_user_model.py
(+8 files in other folders)
