[tool.poetry]
name = "flaskuserauthsystem"
version = "0.1.0"
description = ""
authors = ["Maxim Sergeev <maxsergeev39+gh@gmail.com>"]
readme = "README.md"
repository = "https://github.com/LagrangeH/FlaskUserAuthSystem"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
loguru = "^0.6.0"
flask-sqlalchemy = "^3.0.3"
bcrypt = "^4.0.1"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
