[tool.poetry]
name = "flaskuserauthsystem"
version = "0.1.0"
description = ""
authors = ["Maxim Sergeev <maxsergeev39+gh@gmail.com>"]
readme = "README.md"
repository = "https://github.com/LagrangeH/FlaskUserAuthSystem"
packages = [
    { include = "flaskuserauthsystem", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
loguru = "^0.6.0"
flask-sqlalchemy = "^3.0.3"
bcrypt = "^4.0.1"
flask-login = "^0.6.2"
flask-wtf = "^1.1.1"
faker = "^18.2.0"
environs = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pytest-flask = "^1.2.0"
wrapt = "^1.15.0"
dill = "^0.3.6"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
